fixed single pick save bug